--- a/Interview/src/main/resources/application.properties
+++ b/Interview/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=Interview
 
 # 数据库连接配置
-spring.datasource.url=jdbc:mariadb://localhost:3306/my_database?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://18.117.97.107:3306/my_database?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
