--- a/Interview/src/main/resources/application.properties
+++ b/Interview/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_u
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+
+google.application.credentials=src/main/resources/solosync-50168d2371b2.json
