--- a/Interview/src/main/resources/application.properties
+++ b/Interview/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 
 google.application.credentials=src/main/resources/solosync-15708ffbd26e.json
+
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
